# emb

./: CMakeLists.txt  README.md  main.cxx
example/: CMakeLists.txt  rpc_server_client.cxx  uds_server_client.cxx
include/emb/: call_chain.hpp  callback.hpp  contiguous_buffer.hpp  flags.hpp  rpc.hpp  string.hpp
include/emb/cpp/: tuple.hpp
include/emb/net/: async_core.hpp  async_server.hpp  async_socket_server.hpp  exceptions.hpp  socket.hpp  transfer_chain.hpp  uds_client_socket.hpp  uds_server_socket.hpp
include/emb/rpc/: api.hpp  callback_tuple.hpp  procedure.hpp  protocol.hpp  socket_client.hpp  socket_server.hpp
include/emb/ser/: deserialize.hpp  serialize.hpp
include/emb/ser/serdes/: array.hpp  serdes.hpp  string.hpp  tuple.hpp
include/emb/tup/: get.hpp  to_tuple.hpp
src/net/: async_core.cxx  async_server.cxx  async_socket_server.cxx  socket.cxx  uds_client_socket.cxx  uds_server_socket.cxx
src/rpc/: socket_client.cxx
tests/: CMakeLists.txt  tests_async_core.cxx  tests_async_socket_server.cxx  tests_call_chain.cxx  tests_callback.cxx  tests_scratchpad.cxx  tests_serialization.cxx  tests_server_client_uds_sockets.cxx  tests_socket_performance.cxx  tests_string.cxx  tests_to_tuple.cxx  tests_tuple.cxx
